[package]
name = "binary_search"
version = "0.1.0"
edition = "2021"
default-run = "binary_search"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[[bin]]
name = "binary_search"
path = "src/main.rs"

[[bin]]
name = "generate"
path = "src/generate.rs"
